1.9.0 - 2017-??-??
  - General changes/additions
    * several improvements to the error messages when transforming a tree
      back to text fails. They now make it clearer what part of the tree
      was problematic, and what the tree should have looked like.
    * Fixed the pkg-config file, which should now be usable
  - API changes
    * add function aug_ns_attr to allow iterating through a nodeset
      quickly. See examples/dump.c for an example of how to use them
      instead of aug_get, aug_label etc. and for a way to measure
      performance gains.
  - Lens changes/additions
    * Sshd: split HostKeyAlgorithms into list of values

1.8.1 - 2017-08-17
  - General changes/addition
    * Fix error in handling escaped whitespace at the end of path expressions
      (addresses CVE-2017-7555)

1.8.0 - 2017-03-20
  - General changes/additions
    * augtool: add a 'source' command exposing the aug_source API call
    * augtool: add a 'context' command to make changing into a node more
      discoverable
    * augtool: add an 'info' command to print important information
    * augtool: dramatically reduce memory consumption when all lenses are
      loaded by more aggressively releasing temporary data structures.  On
      my machine, maximum memory usage of 'augtool -L' drops from roughly
      90MB to about 20MB. This will not change the amount of memory used
      when only specific lenses are used, only the default behavior of
      loading all lenses, i.e., when -A is not passed.
    * make building augtool statically possible (Jörg Krause)
    * split aug_to_xml into its own source file, so that statically linking
      against libaugeas.a doesn't require also linking against libXml2 and
      its dependencies, provided aug_to_xml is not needed.
  - API changes
    * add aug_source to find the source file for a particular node
    * reduce memory consumption when AUG_NO_MODL_AUTOLOAD is _not_ passed;
      exact same details as described above for augtool